--- a/AirPort/AirPort.csproj
+++ b/AirPort/AirPort.csproj
@@ -43,12 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Sex.cs" />
     <Compile Include="Flights.cs" />
     <Compile Include="ConsoleHelper.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Flight.cs" />
+    <Compile Include="Passenger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ticket.cs" />
+    <Compile Include="TicketClass.cs" />
     <Compile Include="UserInterFace.cs" />
   </ItemGroup>
   <ItemGroup>
