--- a/AirPort/AirPort.csproj
+++ b/AirPort/AirPort.csproj
@@ -43,12 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Passengers\NameHelper.cs" />
     <Compile Include="Sex.cs" />
     <Compile Include="Flights.cs" />
     <Compile Include="ConsoleHelper.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Flight.cs" />
-    <Compile Include="Passenger.cs" />
+    <Compile Include="Passengers\Passenger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ticket.cs" />
@@ -58,6 +59,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
