--- a/AirPort/AirPort.csproj
+++ b/AirPort/AirPort.csproj
@@ -45,20 +45,19 @@
   <ItemGroup>
     <Compile Include="Flights\FlightInfoBuilder.cs" />
     <Compile Include="Flights\FlightRandomBuilder.cs" />
-    <Compile Include="IPassengerBuilder.cs" />
     <Compile Include="Passengers\PassengerConsoleBuilder.cs" />
     <Compile Include="Passengers\PassengerInfoBuilder.cs" />
     <Compile Include="Passengers\PassengerRandomBuilder.cs" />
     <Compile Include="Passengers\Sex.cs" />
     <Compile Include="Airpot.cs" />
     <Compile Include="ConsoleHelper.cs" />
-    <Compile Include="Direction.cs" />
+    <Compile Include="Flights\Direction.cs" />
     <Compile Include="Flights\Flight.cs" />
     <Compile Include="Passengers\Passenger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ticket.cs" />
-    <Compile Include="TicketClass.cs" />
+    <Compile Include="Tickets\Ticket.cs" />
+    <Compile Include="Tickets\TicketClass.cs" />
     <Compile Include="UserInterFace.cs" />
   </ItemGroup>
   <ItemGroup>
