--- a/ViewLevel/ViewLevel.csproj
+++ b/ViewLevel/ViewLevel.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8BEAC5C0-40AD-45F6-BD72-1740DBF582A2}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ViewLevel</RootNamespace>
     <AssemblyName>ViewLevel</AssemblyName>
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,9 +48,9 @@
     <Compile Include="UserInterFace.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AirPort\AirPort.csproj">
-      <Project>{111ebf32-5049-432f-b04c-6e8a1e1932ad}</Project>
-      <Name>AirPort</Name>
+    <ProjectReference Include="..\AirportLibrary\AirportLibrary.csproj">
+      <Project>{4344e238-3e59-42ee-a9b3-42e07c9a0130}</Project>
+      <Name>AirportLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\PresenterLevel\PresenterLevel.csproj">
       <Project>{96b4afee-215b-45c5-bc9c-b27d4bcb1390}</Project>
