--- a/PresenterLevel/PresenterLevel.csproj
+++ b/PresenterLevel/PresenterLevel.csproj
@@ -39,11 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindFlightEventArgs.cs" />
     <Compile Include="IView.cs" />
     <Compile Include="Presenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AirportDb\AirportDb.csproj">
+      <Project>{9fd6a87f-056b-4425-8b2a-1cc6e707e2b4}</Project>
+      <Name>AirportDb</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AirportLibrary\AirportLibrary.csproj">
       <Project>{4344e238-3e59-42ee-a9b3-42e07c9a0130}</Project>
       <Name>AirportLibrary</Name>
