--- a/AirPort/App.config
+++ b/AirPort/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <connectionStrings>
-    <add name="Airport" connectionString ="data source=DESKTOP-NDN8MCF\SQLEXPRESS;initial catalog=Airport;integrated security=True"/>
+    <add name="Airport" connectionString ="data source=D04\SQLEXPRESS;initial catalog=Airport;integrated security=True"/>
     </connectionStrings>
 </configuration>
